# NokhodKhor

./: .gitignore  LICENSE  Makefile  README.md  board.py  config.py  game.py  ghosts.py  hud.py  main.py  player.py  pyproject.toml  scores.py
.github/workflows/: ci.yml
src/nokhodkhor/: board.py  config.py  game.py  ghosts.py  hud.py  main.py  player.py  scores.py
tests/: conftest.py  test_board.py  test_player.py  test_scores.py
